--- a/example-kt-04retrofit/src/main/res/values/strings.xml
+++ b/example-kt-04retrofit/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="msg_error_fruit_user_locked">Your fruit user account has been locked, please contact us</string>
     <string name="msg_error_fruit_user_not_enabled">Your fruit user account has not been enabled yet, please contact us</string>
 
-    <string name="fruit_percent">(%s%% tasty)</string>
+    <string name="fruit_percent">(%d%% tasty)</string>
 
 </resources>
